# pgnotify

./: .gitignore  Makefile  README.md  example.py  pyproject.toml
.circleci/: config.yml
pgnotify/: __init__.py  notify.py
tests/: conftest.py  test_pgnotify.py
