[tool.poetry]
name = "pgnotify"
version = "0.1"
authors = [ "Robert Lechte <robertlechte@gmail.com>",]
license = "Unlicense"
readme = "README.md"
description = "Easily LISTEN to PostgreSQL NOTIFY notifications"

repository = "https://github.com/djrobstep/pgnotify"
homepage = "https://github.com/djrobstep/pgnotify"

[tool.poetry.dependencies]
python = "*"
psycopg2-binary = "*"
logx = "*"

[tool.poetry.dev-dependencies]
sqlbag = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
tox = "*"
flake8 = "*"
twine = "*"
wheel = "*"
isort = "*"
black = {version = "*", python = ">=3.6"}
