[tool.poetry]
name = "pgnotify"
version = "0.1"
authors = [ "Robert Lechte <robertlechte@gmail.com>",]
license = "Unlicense"
readme = "README.md"
description = "Easily LISTEN to PostgreSQL NOTIFY notifications"

repository = "https://github.com/djrobstep/pgnotify"
homepage = "https://github.com/djrobstep/pgnotify"

[tool.poetry.dependencies]
python = "*"
psycopg2-binary = "*"
logx = "*"

[tool.poetry.dev-dependencies]
sqlbag = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
tox = "*"
flake8 = "*"
twine = "*"
wheel = "*"
isort = "*"
black = {python=">3.6", version=">=18.9b0", allow_prereleases=true}

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
